# ministore

./: .gitignore  data.json  pyproject.toml  requests.http
core/: admin.py  serializers.py
core/migrations/: 0001_initial.py
core/signals/: handlers.py
likes/: models.py
likes/migrations/: 0001_initial.py
ministore/: asgi.py  settings.py  urls.py  wsgi.py
playground/: urls.py  views.py
playground/templates/playground/: hello.html
store/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_cartitem_quantity.py  0002_rename_price_to_unit_price.py  0003_add_slug_to_product.py  0003_alter_customer_options_remove_customer_email_and_more.py  0004_alter_order_options.py  0004_auto_20210610_1442.py  0005_alter_collection_options_alter_customer_options_and_more.py  0005_alter_customer_options.py  0006_alter_orderitem_product_alter_product_collection_and_more.py  0006_auto_20210903_1318.py  0007_alter_cart_id.py  0008_auto_20210907_1345.py  0010_auto_20210913_1914.py  0012_alter_customer_options.py  0013_alter_orderitem_order.py
store/signals/: handlers.py
store_custom/: admin.py
storefront/: settings.py  urls.py
tags/: admin.py  models.py
tags/migrations/: 0001_initial.py
