[tool.poetry]
name = "ministore"
version = "0.1.0"
description = "mini store built with django"
authors = ["emmanuelokoye <tricelex@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "*"
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
django-debug-toolbar = "*"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
